--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "formsilk",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://mcjbyday.github.io/formsilk",
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.9.3",
